@@ -26,6 +26,9 @@
 
 * Fixed incorrect file names rendering position on the desktop.
 
+* Fixed not working Connect to Server... dialog when non-anonymous user
+    is selected.
+
 
 Changes on 1.2.3 since 1.2.2:
 
